<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_cash_in"
            android:icon="@drawable/ic_menu_cash_in"
            android:title="@string/cash_in" />
        <item
            android:id="@+id/nav_cash_out"
            android:icon="@drawable/ic_menu_cash_out"
            android:title="@string/cash_out" />
        <item
            android:id="@+id/nav_transfer"
            android:icon="@drawable/ic_menu_transfer"
            android:title="@string/transfer" />
        <item
            android:id="@+id/nav_qr_transfer"
            android:icon="@drawable/ic_menu_qr_transfer"
            android:title="@string/qr_transfer" />
        <item
            android:id="@+id/nav_pending_transfer"
            android:icon="@drawable/ic_menu_pending_transfer"
            android:title="@string/pending_transfer" />
        <item
            android:id="@+id/nav_top_up"
            android:icon="@drawable/ic_tpoup"
            android:title="@string/top_up" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_activity_log"
            android:icon="@drawable/ic_menu_activity_log"
            android:title="@string/activity_log" />
        <item
            android:id="@+id/nav_shop_payment"
            android:icon="@drawable/ic_menu_shop_payment"
            android:title="@string/shop_payment" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_menu_support"
            android:title="@string/support" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
    </group>
</menu>
