<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="telvoterminal.telvo.com.terminal.support.SupportFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/callLinearLayout"
                android:gravity="center_vertical"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <telvoterminal.telvo.com.terminal.customviews.RobotoRegularTextView
                    android:text="+880-2-9887646"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <telvoterminal.telvo.com.terminal.customviews.RobotoRegularTextView
                    android:text="@string/call_24_7"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_10"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/helpLinearLayout"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <telvoterminal.telvo.com.terminal.customviews.RobotoRegularTextView
                    android:text="@string/help_and_support"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <telvoterminal.telvo.com.terminal.customviews.RobotoRegularTextView
                    android:text="@string/ask_us_anytime_for_help_and_support"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_10"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/privacyPolicyLinearLayout"
                android:gravity="center_vertical"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <telvoterminal.telvo.com.terminal.customviews.RobotoRegularTextView
                    android:text="@string/privacy_policy"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <telvoterminal.telvo.com.terminal.customviews.RobotoRegularTextView
                    android:text="@string/see_privacy_policy_for_using_our_service"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_10"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/termsLinearLayout"
                android:gravity="center_vertical"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <telvoterminal.telvo.com.terminal.customviews.RobotoRegularTextView
                    android:text="@string/terms_and_conditions"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <telvoterminal.telvo.com.terminal.customviews.RobotoRegularTextView
                    android:text="@string/see_terms_and_conditions_of_our_service"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_10"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/feedbackLinearLayout"
                android:gravity="center_vertical"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <telvoterminal.telvo.com.terminal.customviews.RobotoRegularTextView
                    android:text="@string/feedback"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <telvoterminal.telvo.com.terminal.customviews.RobotoRegularTextView
                    android:text="@string/provide_feedback_to_improve_the_service"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_10"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
